# rust-recipe-parser

./: Cargo.toml  Readme.md
src/: main.rs  recipe.json  recipe_client.rs  recipes.rs  spoon.rs
src/recipes/: ingredient.rs  schema.rs
