[package]
name = "recipe-parser"
version = "0.1.0"
authors = ["Hunter Haydel <haydh530@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_contrib = "0.4.5"
reqwest = { version = "0.10.7", features = ["blocking","json"] }
scraper = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
